
	* parser.y: fixed bug #180 - added check that HIGHLIGHT and LOWLIGHT are
	  not specified at the same time.
	* codegen.c (output_set_attribute): made HIGHLIGHT ON imply LOWLIGHT off
	  and vice versa.

2016-01-03  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: fixed bug #178 - added check that certain identifiers are
	  not 88-level items.

2016-01-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l: moved SET_LOCALATION to tree.c (cb_build_xyz)
	* tree.c (cb_concat_literals): the new literal inherits its position from
	  the first literal, check for cb_literal_length
	ODO checks:
	* parser.y (integer): return numeric literal -1 instead of cb_int1
	  for incorrect numerical literals
	* parser.y: add check OCCURS max. must be greater than OCCURS min.
	NESTED OCCURS with DEPENDING - feature-requests:#99:
	* tree.h: remove flag_odo_item, add odo_level instead
	* typeck.c: compute odo_level in (cb_validate_program_data),
	  add check for nested ODO to (cb_validate_one)

2015-12-31  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (reserved_words), parser.y: corrected GRID implementation;
	  is different to LEFTLINE.

2015-12-30  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c, codeoptim.c: Changed code to generate cob_screen as a
	  doubly linked list.
	* reserved.c (reserved_words): added GRID as synonym for LEFTLINE.

2015-12-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, config.c: changes for replacing -cb_conf=<tag>:<value> with
	  additional flags -f<tag>=<value> including -f[no-]<tag> for binary confs
	* config.def, cobc.c, cobc.h, config.c: added additional parameter in
	  config.def for help output; changed defines for CB_CONFIG_*

2015-12-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	part fixed bug #177 - added missing ODO checks for subordinate items
	* tree.h: renamed flag_odo_item to flag_odo_relative, add new flag_odo_item